@startuml

title __REPOSITORY's Class Diagram__\n

  package  {
    package edu.uark {
      package edu.uark.dataaccess.repository {
        abstract class BaseRepository {
            {static} - INVALID_INDEX : int
            {static} - COUNT_PROJECTION : String
            + count()
            + get()
            + all()
            + exists()
            + saveMany()
            + getMany()
            + deleteMany()
            + inRange()
            + connectAndRun()
            + getPrimaryTableName()
            {abstract} # createOne()
            # getDefaultProjection()
            # openConnection()
            # firstOrDefaultWhere()
            # firstOrDefaultWhere()
            # firstOrDefaultWhere()
            - selectFirstOrDefault()
            # allWhere()
            # allWhere()
            # allWhere()
            # allWhere()
            # allWhere()
            # allWhere()
            # allWhere()
            # allWhere()
            # allWhere()
            - selectAll()
            # existsWhere()
            # existsWhere()
            # existsWhere()
            - exists()
            # countWhere()
            - count()
            # deleteWhere()
            - delete()
            - selectQuery()
            - existsQuery()
            - deleteCommand()
            - fromAndWhereClause()
            # BaseRepository()
        }
      }
    }
  }
  

  package  {
    package edu.uark {
      package edu.uark.dataaccess.repository {
        interface BaseRepositoryInterface {
            {abstract} + count()
            {abstract} + get()
            {abstract} + all()
            {abstract} + exists()
            {abstract} + getPrimaryTableName()
            {abstract} + saveMany()
            {abstract} + getMany()
            {abstract} + deleteMany()
            {abstract} + inRange()
            {abstract} + connectAndRun()
        }
      }
    }
  }
  

  package  {
    package edu.uark {
      package edu.uark.dataaccess.repository {
        enum DatabaseTable {
          NONE
          PRODUCT
          label
        }
      }
    }
  }
  

  BaseRepository -up-|> BaseRepositoryInterface
  BaseRepository o-- DatabaseTable : primaryTable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
